first two models tested rnn and lstm (file parent directories needed)

--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,15 @@ __pycache__/
 *.py[codz]
 *$py.class
 
+archive/
+tests/
+generated_shakespeare_texts/
+
+corpus.txt
+corpus1.txt
+combined_corpus.txt
+training_loss.png
+
 # C extensions
 *.so
 
