--- a/.gitignore
+++ b/.gitignore
@@ -5,10 +5,10 @@ __pycache__/
 
 archive/
 tests/
-generated_shakespeare_texts/
+generated_gutenberg_texts/
 project_files_directory/
 .ipynb_checkpoints/
-.ipynb_checkpoints/
+checkpoints/
 
 corpus.txt
 corpus1.txt
